i18n(es): Update of multiple pages. (#2604)
Co-authored-by: Agustin Mulet <31162600+agustinmulet@users.noreply.github.com>
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/es/editor-setup.mdx
+++ b/src/pages/es/editor-setup.mdx
@@ -5,8 +5,7 @@ description: Configura tu editor de código para desarrollar con Astro.
 i18nReady: true
 ---
 import Badge from '~/components/Badge.astro';
-
-
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 Personaliza tu editor de código para mejorar tu experiencia de desarrollo con Astro y desbloquear nuevas funcionalidades.
 
@@ -35,7 +34,7 @@ Nuestra increíble comunidad mantiene extensiones para otros editores de código
 
 ### IDE de JetBrains
 
-JetBrains ha anunciado que próximamente ofrecerá soporte para Astro en su [Webstorm IDE](https://www.jetbrains.com/webstorm/). La [Hoja de ruta](https://blog.jetbrains.com/webstorm/2022/12/webstorm-2023-1-roadmap/) muestra que Astro obtendrá soporte a partir del lanzamiento 2023.1, que está programado para finales de Marzo del 2023.
+El soporte inicial para Astro llegó a Webstorm 2023.1 (por el momento en acceso temprano). Puedes instalar el plugin oficial a través de la [página de plugins de Jetbrains](https://plugins.jetbrains.com/plugin/20959-astro) o buscando "Astro" en la pestaña de Plugins y beneficiarte de las funciones tales como resaltado de sintaxis, formateo y autocompletado de código, con planes para agregar más funciones avanzadas en el futuro. También está disponible para las otras [IDEs de Jetbrains con soporte para Javascript](https://www.jetbrains.com/products/#lang=js&type=ide).
 
 El próximo [Fleet IDE](https://www.jetbrains.com/fleet/) de JetBrains también soportará servidores de lenguaje y, como consecuencia, nuestras herramientas actuales podrán ejecutarse allí sin ningún problema.
 
@@ -61,9 +60,23 @@ Consulta [la guía del usuario del proyecto](https://ota-meshi.github.io/eslint-
 
 Para comenzar, primero instala Prettier y el plugin:
 
-```shell
-npm install --save-dev prettier prettier-plugin-astro
-```
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm install --save-dev prettier prettier-plugin-astro
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm install -D prettier prettier-plugin-astro
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn add --dev prettier prettier-plugin-astro
+  ```
+  </Fragment>
+</PackageManagerTabs>
 
 Prettier detectará automáticamente el plugin y lo usará para procesar los archivos `.astro` cuando lo ejecutes:
 
