--- a/src/pages/es/guides/images.mdx
+++ b/src/pages/es/guides/images.mdx
@@ -306,6 +306,37 @@ const {src, ...attrs} = Astro.props;
 </style>
 ```
 
+### Usar la etiqueta `<img>` con la integración de imágenes 
+
+La integración oficial de imágenes cambia las importaciones de imágenes para devolver un objeto en lugar de un string de origen.
+El objeto tiene las siguientes propiedades, derivadas desde un archivo importado:
+```ts
+{
+  src: string;
+  width: number;
+  height: number;
+  format: 'avif' | 'gif' | 'heic' | 'heif' | 'jpeg' | 'jpg' | 'png' | 'tiff' | 'webp';
+}
+```
+
+Si tienes la integración de imágenes instalada, usa a la propiedad `src` del objeto cuando utilices la etiqueta `<img>`.
+
+```astro ".src"
+---
+import rocket from '../images/rocket.svg';
+---
+<img src={rocket.src} alt="A rocketship in space."/>
+```
+
+Alternativamente, agrega `?url` a tus importaciones para indicarles que devuelvan un string de origen.
+
+```astro "?url"
+---
+import rocket from '../images/rocket.svg?url';
+---
+<img src={rocket} alt="A rocketship in space."/>
+```
+
 ## Usar imágenes de un CMS o una CDN
 
 Las CDNs de imágenes funcionan con Astro. Utiliza la URL completa de una imagen como atributo `src` en una etiqueta `<img>` o notación de Markdown. 
