--- a/src/pages/es/reference/api-reference.mdx
+++ b/src/pages/es/reference/api-reference.mdx
@@ -218,6 +218,21 @@ Obtener una cookie mediante `Astro.cookies.get()` retorna un tipo `AstroCookie`.
 | `number`  | `() => number`              | Analiza el valor de la cookie como un _Number_. Retorna NaN si no es un número válido.                                                      |
 | `boolean` | `() => boolean`             | Convierte el valor de la cookie en un booleano.                                                                                             |
 
+### `Astro.redirect()`
+En el modo de [renderizado del lado del servidor](/es/guides/server-side-rendering/), `Astro.redirect()` te permite redireccionar a otra página.
+Una página (no un componente hijo) debe `return` (devolver) el resultado de `Astro.redirect()` para que la redirección ocurra.
+
+```astro title="src/pages/account.astro" {8}
+---
+import { isLoggedIn } from '../utils';
+const cookie = Astro.request.headers.get('cookie');
+// Si el usuario no está logueado, redirígelo a la página de login
+if (!isLoggedIn(cookie)) {
+  return Astro.redirect('/login');
+}
+---
+```
+
 ### `Astro.canonicalURL`
 
 :::caution[Obsoleto]
@@ -547,7 +562,7 @@ export function get({ redirect }: APIContext) {
 }
 ```
 
-Ver también: [Astro.redirect](/es/guides/server-side-rendering/#astroredirect)
+Ver también: [`Astro.redirect()`](#astroredirect)
 
 ## `getStaticPaths()`
 
