--- a/src/pages/es/guides/data-fetching.mdx
+++ b/src/pages/es/guides/data-fetching.mdx
@@ -106,105 +106,6 @@ const weather = json.data
 
 ## Fetching de datos desde un Headless CMS
 
-¡Obtén contenido remoto de tus CMS favoritos como Storyblok o WordPress!
+Los componentes de Astro pueden obtener datos desde tu CMS favorito y luego renderizarlos como contenido en tu página. Usando [rutas dinámicas](/es/core-concepts/routing/#rutas-dinámicas), los componentes pueden generar páginas basadas en el contenido obtenido del CMS.
 
-Los componentes de Astro pueden obtener datos de tu CMS y luego renderizarlos en la página. Usando [rutas dinámicas](/es/core-concepts/routing/#rutas-dinámicas), los componentes pueden incluso generar páginas basadas en el contenido obtenido del CMS.
-
-A continuación, algunos ejemplos de fetching de datos en Astro, con enlaces a tutoriales completos.
-
-### Ejemplo: Storyblok API
-
-```astro
----
-// src/pages/index.astro
-// Obtén la lista de enlaces de tu página de Storyblok usando @storyblok/js
-import BaseLayout from '../layouts/BaseLayout.astro';
-import { storyblokInit, apiPlugin } from "@storyblok/js";
-
-const { storyblokApi } = storyblokInit({
-  accessToken: "MY_STORYBLOK_ACCESS_TOKEN",
-  use: [apiPlugin],
-});
-
-const { data } = await storyblokApi.get('cdn/links');
-const links = Object.values(data.links);
----
-<BaseLayout>
-  <h1>Astro + Storyblok</h1>
-  <ul>
-    {links.map(link => (
-      <li><a href={link.slug}>{link.name}</a></li>
-    ))}
-  </ul>
-</BaseLayout>
-```
-
-¡Puedes ver el tutorial completo [Agregar un Headless CMS a Astro en 5 minutos](https://www.storyblok.com/tp/add-a-headless-cms-to-astro-in-5-minutes) para agregar Storyblok a tu proyecto de Astro!
-
-### Ejemplo: WordPress + GraphQL
-
-```astro
----
-// src/pages/about.astro
-// Obtén el contenido de tu página desde la API de WordPress
-
-import BaseLayout from '../../layouts/BaseLayout.astro';
-
-const slug = 'about';
-const response = await fetch(import.meta.env.WORDPRESS_API_URL, {
-  method: 'POST',
-  headers: { 'Content-Type': 'application/json' },
-  body: `
-    {
-      page(id:"${slug}", idType:URI) {
-        title
-        content
-      }
-    }
-  `
-});
-const data = await response.json();
----
-<BaseLayout>
-  <h1>{data.title}</h1>
-  <article set:html={data.content} />
-</BaseLayout>
-```
-
-¡Puedes ver el tutorial completo [Astro con WordPress como un Headless CMS](https://blog.openreplay.com/building-an-astro-website-with-wordpress-as-a-headless-cms) para agregar WordPress a tu proyecto de Astro!
-
-### Ejemplo: Crystallize
-
-```astro title="src/pages/index.astro"
----
-// Obtén tu catálogo de rutas desde la API de GraphQL de Crystallize
-
-import BaseLayout from '../../layouts/BaseLayout.astro';
-import { createClient } from '@crystallize/js-api-client';
-const apiClient = createClient({
-  tenantIdentifier: 'furniture'
-});
-const query = `
-  query getCataloguePaths{
-    catalogue(language: "en", path: "/shop") {
-      name
-      children {
-        name
-        path
-      }
-    }
-  }
-`
-const { data } = await apiClient.catalogueApi(query)
----
-<BaseLayout>
-  <h1>{catalogue.name}</h1>
-  <nav>
-    <ul>
-      {catalogue.children.map(child => (
-        <li><a href={child.path}>{child.name}</a></li>
-      ))}
-    </ul>
-  </nav>
-</BaseLayout>
-```
+Ve nuestras [guías de CMS](/es/guides/cms/) para obtener más detalles sobre cómo integrar Astro con un headless CMS incluyendo Stroyblok, Contentful y WordPress.
