--- a/src/pages/es/guides/server-side-rendering.mdx
+++ b/src/pages/es/guides/server-side-rendering.mdx
@@ -4,7 +4,6 @@ title: Renderizado en el servidor
 i18nReady: true
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
-
 import Since from '~/components/Since.astro';
 
 
@@ -70,17 +69,17 @@ También puedes añadir un adaptador manualmente instalando el paquete y actuali
    <PackageManagerTabs>
      <Fragment slot="npm">
      ```shell
-     npx astro add netlify
+     npm install @astrojs/mi-adaptador
      ```
      </Fragment>
      <Fragment slot="pnpm">
      ```shell
-     pnpm astro add netlify
+     pnpm install @astrojs/mi-adaptador
      ```
      </Fragment>
      <Fragment slot="yarn">
      ```shell
-     yarn astro add netlify
+     yarn add @astrojs/mi-adaptador
      ```
      </Fragment>
    </PackageManagerTabs>
@@ -106,7 +105,9 @@ Astro seguirá siendo un generador de sitios estáticos por defecto. Pero una ve
 
 Since v="2.0.0" />
 
-Para habilitar **renderizado híbrido**, cualquier [página](/es/core-concepts/astro-pages/) o [endpoint del servidor](/es/core-concepts/endpoints/#endpoints-del-servidor-rutas-de-api) puedes optar por el prerenderizado. Estos archivos se renderizarán estáticamente en tiempo de compilación, similar al modo estático por defecto [`output`](/es/reference/configuration-reference/#output).
+Para habilitar **renderizado híbrido**, cualquier [página](/es/core-concepts/astro-pages/) o [endpoint del servidor](/es/core-concepts/endpoints/#endpoints-del-servidor-rutas-de-api) que tienen soporte para exportar variables (`.astro`, `.mdx`, `.ts`, or `.js`) puede optar por el prerenderizado. Estos archivos se renderizarán estáticamente en tiempo de compilación, similar al modo estático por defecto [`output`](/es/reference/configuration-reference/#output).
+
+Simplemente agrega `export const prerender = true`:
 
 ```astro title="src/pages/index.astro" {2}
 ---
@@ -116,6 +117,25 @@ export const prerender = true;
 <html>
   <!-- Página aquí... -->
 </html>
+```
+
+```mdx title="src/pages/mypage.mdx" {5}
+---
+layout: '../layouts/markdown.astro'
+title: 'My page'
+---
+export const prerender = true;
+# Esta es mi página
+```
+
+
+```js title="src/pages/myendpoint.js" {1}
+export const prerender = true;
+export async function get() {
+  return {
+    body: JSON.stringify({ message: `Este es mi endpoint` }),
+  };
+}
 ```
 
 ### `Astro.request.headers`
