--- a/src/pages/es/reference/error-reference.mdx
+++ b/src/pages/es/reference/error-reference.mdx
@@ -34,6 +34,7 @@ La siguiente referencia es una lista completa de los errores que puedes encontra
 - [**NoMatchingImport**](/es/reference/errors/no-matching-import/) (E03018)<br/>No import found for component.
 - [**InvalidPrerenderExport**](/es/reference/errors/invalid-prerender-export/) (E03019)<br/>Invalid prerender export.
 - [**InvalidComponentArgs**](/es/reference/errors/invalid-component-args/) (E03020)<br/>Invalid component arguments.
+- [**PageNumberParamNotFound**](/es/reference/errors/page-number-param-not-found/) (E03021)<br/>Page number param not found.
 - [**FailedToLoadModuleSSR**](/es/reference/errors/failed-to-load-module-ssr/) (E04001)<br/>Could not import file.
 - [**InvalidGlob**](/es/reference/errors/invalid-glob/) (E04002)<br/>Invalid glob pattern.
 
