--- a/src/pages/zh-cn/reference/configuration-reference.mdx
+++ b/src/pages/zh-cn/reference/configuration-reference.mdx
@@ -396,7 +396,7 @@ export default defineConfig({
 <Since v="1.7.0" />
 </p>
 
-设置要在 `astro dev` 和 `astro preview`` 中发送的自定义 HTTP 响应标头。
+设置要在 `astro dev` 和 `astro preview` 中发送的自定义 HTTP 响应标头。
 
 ## Markdown 选项
 
