translate `getting-started.mdx`

--- a/src/pages/ko/getting-started.mdx
+++ b/src/pages/ko/getting-started.mdx
@@ -1,115 +1,108 @@
 ---
 layout: ~/layouts/MainLayout.astro
-title: Getting Started
-description: A basic intro to Astro.
-i18nReady: true
+title: 시작하기
+description: Astro 기본 소개 내용입니다.
 ---
 import Button from '../../components/Button.astro'
 import ContributorList from '../../components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-:::tip[Astro version 2 is here!]
-**What’s new in Astro v2?** [Find out in the announcement blog post](https://astro.build/blog/astro-2/).  
-**Ready to upgrade?** [Follow our upgrade guide](/en/guides/upgrade-to/v2/).
+:::tip[Astro 버전 2 출시!]
+**Astro v2의 새 기능은?** [공식 블로그의 내용을 통해 자세히 확인해보세요](https://astro.build/blog/astro-2/).  
+**업그레이드가 필요하신가요?** [업그레이드 가이드를 확인해보세요](/en/guides/upgrade-to/v2/).
 :::
 
-<h2>What is Astro?</h2>
+<h2>Astro란 무엇인가요?</h2>
 
-Astro is an **all-in-one** **web framework** for building **fast,** **content-focused** websites. 
+Astro는 **콘텐츠 중심의** **빠른** 웹 사이트를 제작하기 위한 **올인원(all-in-one)** **웹 프레임워크**입니다. 
 
-## Key Features
+## 주요 기능
 
-- **Component Islands:** A new web architecture for building faster websites.
-- **Server-first API design:** Move expensive hydration off of your users' devices.
-- **Zero JS, by default:** No JavaScript runtime overhead to slow you down.
-- **Edge-ready:** Deploy anywhere, even a global edge runtime like Deno or Cloudflare.
-- **Customizable:** Tailwind, MDX, and 100+ other integrations to choose from.
-- **UI-agnostic:** Supports React, Preact, Svelte, Vue, Solid, Lit and more.
+- **컴포넌트 아일랜드:** 더 빠른 웹사이트 구축을 위한 새로운 웹 아키텍처 입니다.
+- **서버 우선 API 설계:** 사용자 디바이스에서 값비싼 수화 작업 제거합니다.
+- **Zero JS 지원:** 속도를 저하시키는 자바스크립트 런타임 오버헤드가 없습니다.
+- **엣지 지원:** Deno 또는 Cloudflare와 같은 글로벌 엣지 런타임을 지원하며, 어디서나 배포할 수 있습니다.
+- **사용자 정의 기능 제공:** Tailwind, MDX 및 100여개 이상의 통합 기능을 선택할 수 있습니다.
+- **다양한 UI 프레임워크 사용가능:** React, Preact, Svelte, Vue, Solid, Lit 등을 지원합니다.
 
-Check out our detailed [Why Astro](/en/concepts/why-astro/) breakdown to learn more about what makes Astro special. ✨
+[Why Astro](/ko/concepts/why-astro/)글을 통해 Astro의 특징을 자세히 살펴보세요. ✨
 
+## 브라우저에서 Astro를 사용하기
 
-## Try Astro in your browser
-
-Visit [astro.new](https://astro.new/) and choose from a variety of templates to get started. Play around with a full, working version of Astro right in your browser!
+[astro.new](https://astro.new/)를 방문하여 다양한 템플릿 중 하나를 선택하고, 실행해 볼 수 있습니다. 브라우저에서 바로 정식 버전의 Astro를 사용해 보세요!
 
 <div style="display: flex; flex-wrap: wrap; gap: 0.5rem;">
-  <Button href="https://astro.new/basics?on=stackblitz">Launch basic template</Button>
-  <Button variant="outline" href="https://astro.new/">View all templates →</Button>
+  <Button href="https://astro.new/basics?on=stackblitz">기본 템플릿 실행하기</Button>
+  <Button variant="outline" href="https://astro.new/">전체 템플릿 둘러보기 →</Button>
 </div>
 
-## Start your first project
+## 첫 번째 프로젝트를 생성하기
 
-Get a new Astro project up and running locally with our helpful `create astro` CLI wizard!
+`create astro` CLI 생성 마법사를 사용하여 새로운 Astro 프로젝트를 로컬에서 시작하고 실행하세요!
 
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
-  # create a new project with npm
+  # npm으로 새 프로젝트 만들기
   npm create astro@latest
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  # create a new project with pnpm
+  # pnpm으로 새 프로젝트 만들기
   pnpm create astro@latest
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
-  # create a new project with yarn
+  # yarn으로 새 프로젝트 만들기
   yarn create astro
   ```
   </Fragment>
 </PackageManagerTabs>
 
-Our [Installation Guide](/en/install/auto/) has full, step-by-step instructions for installing Astro using our CLI wizard, creating a new project from an existing Astro GitHub repository, and for installing Astro manually.
+[Installation Guide](/ko/install/auto/)에서 CLI 도구를 사용하여 Astro를 설치하고, 기존 Astro GitHub 저장소에서 새 프로젝트를 생성하고, 수동으로 Astro를 설치하는 방법에 대한 전체 단계별 지침이 나와 있습니다.
 
+## Astro 배우기
 
-## Learn Astro
+Astro 사이트 패턴과 몇 가지 주요 개념을 예제를 통해 살펴보세요!
 
-See examples of some of the key concepts and patterns of an Astro site!
+📚 사이트에 첫 페이지를 추가해보세요. [Add your first page](/ko/core-concepts/astro-pages/).
 
-📚 [Add your first page](/en/core-concepts/astro-pages/) to your site.
+📚 Astro의 프로젝트 구조에 대해 자세히 알아보세요. [project structure](/ko/core-concepts/project-structure/).
 
-📚 Read more about Astro’s [project structure](/en/core-concepts/project-structure/).
+📚 Astro의 파일 기반 라우팅에 대해 알아보세요. [file-based routing](/ko/core-concepts/routing/).
 
-📚 Learn about Astro's [file-based routing](/en/core-concepts/routing/).
+*... **참고자료** 탭에서 전체 API 설명서를 찾아보세요.*
 
-*... find our full API documentation under the **Reference** tab.*
+## Astro 확장하기
 
+🧰 [미리 빌드된 테마](https://astro.build/themes/)로 프로젝트를 시작해보세요.
 
-## Extend Astro
+🧰 공식 및 커뮤니티 [플러그인과 컴포넌트](https://astro.build/integrations/)로 사이트를 맞춤 설정하세요.
 
-🧰 Start your next project with a [prebuilt theme](https://astro.build/themes/)
+🧰 [사이트 쇼케이스](https://astro.build/showcase/)에서 영감을 얻으세요.
 
-🧰 Customize your site with official and community [plugins and components](https://astro.build/integrations/).
+*... [guide to using integrations](/ko/guides/integrations-guide/)를 참조하세요*.
 
-🧰 Get inspired by visiting our [site showcase](https://astro.build/showcase/).
+## 커뮤니티에 참여하기
 
-*... see our [guide to using integrations](/en/guides/integrations-guide/)*.
+[Astro 디스코드](https://astro.build/chat/)에 참여하여 활발하고 친근한 커뮤니티와 공유하고 도움을 받으세요!
 
+💬 `#introduce-yourself` 채널에서 인사해 주세요!
 
+💬 `#support-threads` 채널에서 지원팀에게 궁금한 내용을 질문하세요!
 
-## Join our Community
+💬 `#showcase` 채널에서 그동안 작업한 내용을 공유하세요!
 
-Join us in the [Astro Discord](https://astro.build/chat/) to share with and get help from an active, friendly community!
+## 새 소식 알아보기
 
-💬 Say hi in our `#introduce-yourself` channel!
+[Astro 블로그](https://astro.build/blog/)
 
-💬 Ask our Support Squad a question in our `#support-threads` channel!
+[Astro 변경 로그](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md)
 
-💬 Share what you've been working on in our `#showcase` channel!
+## 기여하기
 
-
-## What's New?
-
-[Astro Blog](https://astro.build/blog/)
-
-[Astro changelog](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md)
-
-## Contribute
-
-These docs are brought to you by all these helpful people. [Join us on GitHub!](https://github.com/withastro/docs)
+모든 문서 내용은 아래의 기여자들이 제공한 것입니다. [GitHub에서 참여하기!](https://github.com/withastro/docs)
 
 <ContributorList githubRepo="withastro/docs" />
