--- a/src/pages/es/guides/deploy/cloudflare.mdx
+++ b/src/pages/es/guides/deploy/cloudflare.mdx
@@ -135,3 +135,5 @@ Para comenzar, crea un directorio `/functions` en la raíz de tu proyecto. Al es
 Si encuentras errores, vuelve a verificar que la versión de `node` que estás usando localmente (`node -v`) coincida con la versión que estás especificando en la variable de entorno.
 
 Cloudflare requiere [Node v16.13](https://miniflare.dev/get-started/cli#installation), la cual es una versión más reciente que el mínimo por defecto de Astro, así que verifica que estés usando al menos v16.13.
+
+La hidratación del lado del cliente puede fallar como resultado de la configuración de Auto Minify de Cloudflare. Si ves `Hydration completed but contains mismatches` en la consola, asegúrate de deshabilitar Auto Minify en la configuración de Cloudflare.
