--- a/src/pages/es/guides/testing.mdx
+++ b/src/pages/es/guides/testing.mdx
@@ -64,6 +64,8 @@ Alternativamente, puedes instalar Playwright dentro de tu proyecto de Astro usan
 2. Crea una nueva carpeta y añade el siguiente archivo de test en `src/test`. Copia y pega el siguiente test dentro del archivo para verificar que la meta información de la página es correcta. Actualiza el valor `<title>` de la página para que coincida con la página que se está testeando.
 
 ```jsx title="src/test/index.spec.ts" "Astro is awesome!"
+import { test, expect } from '@playwright/test';
+
 test('meta is correct', async ({ page }) => {
   await page.goto("http://localhost:3000/");
 
