--- a/src/pages/es/install/auto.mdx
+++ b/src/pages/es/install/auto.mdx
@@ -53,7 +53,7 @@ Ejecuta el siguiente comando en tu terminal para iniciar el asistente de instala
 
 Puedes ejecutar `create astro` en cualquier carpeta de tu computadora, así que no es necesario crear un directorio vacío antes de inicializar tu proyecto. Si aún no tienes un directorio designado para tu nuevo proyecto, el asistente creará uno por ti.
 
-Si todo ha salido bien, deberías ver un mensaje "Ready for liftoff!" seguido de algunas recomendaciones de próximos pasos, "Next steps". Entra en el nuevo directorio de tu proyecto usando `cd` y empieza a utilizar Astro.
+Si todo ha salido bien, deberías ver un mensaje "Liftoff confirmed. Explore your project!" seguido de algunas recomendaciones de próximos pasos, "Next steps". Entra en el nuevo directorio de tu proyecto usando `cd` y empieza a utilizar Astro.
 
 Si has omitido el paso de `npm install` durante el asistente CLI, asegúrate de instalar las dependencias antes de continuar.
 
