--- a/src/pages/es/guides/integrations-guide.mdx
+++ b/src/pages/es/guides/integrations-guide.mdx
@@ -120,6 +120,40 @@ integrations: [
 ]
 ```
 
+## Eliminando una Integración
+
+Para eliminar una integración, primero desinstala la integración de tu proyecto
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm uninstall @astrojs/image
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm uninstall @astrojs/image
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn remove @astrojs/image
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+Después, elimina la integración de tu archivo `astro.config.*`:
+
+```js title="astro.config.mjs" del={3,7}
+import { defineConfig } from 'astro/config'
+import image from "@astrojs/image";
+export default defineConfig({
+  integrations: [
+    image()
+  ]
+})
+```
+
 ## Encontrar más integraciones
 
 Puedes encontrar muchas integraciones desarrolladas por la comunidad en el [Directorio de Integraciones de Astro](https://astro.build/integrations/). Sigue los enlaces para obtener instrucciones detalladas de uso y configuración.
