apply review suggestion
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -121,13 +121,10 @@ If you **do not** already extend Astro's `strict` or `strictest` recommended Typ
 }
 ```
 
-:::note
-When using JavaScript files in an Astro project using a `tsconfig.json`, you won't get intellisense or type-checking, unless your project is using a `jsconfig.json`. As such, when using a JavaScript file as your Content Collections configuration file, you won't get those benifits.
-To get type checking and intellisense for JavaScript files in that case, you will need to update your `tsconfig.json` to enable the `allowJs` compiler option.
-
-```json title="tsconfig.json" ins={6}
+:::note[Not using TypeScript?]
+If you use `.js` or `.mjs` files in an Astro project, you can enable IntelliSense and type checking in your editor by enabling `allowJs` in your `tsconfig.json`:
+```json title="tsconfig.json" ins={5}
 {
-  // Note: No change needed if you use "astro/tsconfigs/strict" or "astro/tsconfigs/strictest"
   "extends": "astro/tsconfigs/base",
   "compilerOptions": {
     "strictNullChecks": true,
