--- a/src/pages/en/reference/publish-to-npm.mdx
+++ b/src/pages/en/reference/publish-to-npm.mdx
@@ -98,7 +98,7 @@ The `package.json` in the package directory includes all of the information rela
 }
 ```
 
-#### `package.json#description`
+#### `description`
 
 A short description of your component used to help others know what it does.
 
