--- a/src/pages/en/reference/publish-to-npm.mdx
+++ b/src/pages/en/reference/publish-to-npm.mdx
@@ -108,7 +108,7 @@ A short description of your component used to help others know what it does.
 }
 ```
 
-#### `package.json#type`
+#### `type`
 
 The module format used by Node.js and Astro to interpret your `index.js` files.
 
