--- a/src/pages/en/reference/publish-to-npm.mdx
+++ b/src/pages/en/reference/publish-to-npm.mdx
@@ -120,7 +120,7 @@ The module format used by Node.js and Astro to interpret your `index.js` files.
 
 We recommend using `"type": "module"` so that your `index.js` can be used as an entrypoint with `import` and `export`.
 
-#### `package.json#homepage`
+#### `homepage`
 
 The url to the project homepage.
 
