--- a/src/pages/en/reference/publish-to-npm.mdx
+++ b/src/pages/en/reference/publish-to-npm.mdx
@@ -158,7 +158,7 @@ This is an optional optimization to exclude unnecessary files from the bundle sh
 }
 ```
 
-#### `package.json#keywords`
+#### `keywords`
 
 An array of keywords relevant to your component that are used to help others [find your component on npm](https://www.npmjs.com/search?q=keywords:astro-component,withastro) and in any other search catalogs.
 
