--- a/src/pages/en/reference/publish-to-npm.mdx
+++ b/src/pages/en/reference/publish-to-npm.mdx
@@ -132,7 +132,7 @@ The url to the project homepage.
 
 This is a great way to direct users to an online demo, documentation, or homepage for your project.
 
-#### `package.json#exports`
+#### `exports`
 
 The entry points of a package when imported by name.
 
