--- a/src/pages/fr/guides/deploy/buddy.mdx
+++ b/src/pages/fr/guides/deploy/buddy.mdx
@@ -5,7 +5,7 @@ layout: ~/layouts/DeployGuideLayout.astro
 i18nReady: true
 ---
 
-Vous pouvez déployer votre projet Astro en utilisant [Buddy](https://buddy.works/), une solution CI/CD qui peut construire votre site et le pousser vers de nombreuses cibles de déploiement différentes, y compris les serveurs FTP et les fournisseurs d'hébergement en nuage.
+Vous pouvez déployer votre projet Astro en utilisant [Buddy](https://buddy.works/), une solution CI/CD qui peut construire votre site et le pousser vers de nombreuses cibles de déploiement différentes, y compris les serveurs FTP et les fournisseurs d'hébergement dans le cloud.
 
 :::note
 Buddy ne hébergera pas votre site lui-même. Au lieu de cela, il vous aide à gérer le processus de compilation et à livrer le résultat à une plate-forme de déploiement de votre choix.
@@ -13,7 +13,7 @@ Buddy ne hébergera pas votre site lui-même. Au lieu de cela, il vous aide à g
 
 ## Comment déployer
 
-1. [Creér un compte](https://buddy.works/sign-up).
+1. [Creéz un compte](https://buddy.works/sign-up).
 2. Créez un nouveau projet et connectez-le avec un dépôt git (GitHub, GitLab, BitBucket, n'importe quel dépôt Git privé ou vous pouvez utiliser l'hébergement Git de Buddy).
 3. Ajoutez un nouveau pipeline.
 4. Dans le nouveau pipeline, ajoutez une action **[Node.js](https://buddy.works/actions/node-js)**.
