--- a/src/pages/zh-cn/reference/publish-to-npm.mdx
+++ b/src/pages/zh-cn/reference/publish-to-npm.mdx
@@ -119,7 +119,7 @@ Node.js 和 Astro 用来解析 `index.js` 文件所用模块格式。
 
 我们推荐使用 `"type": "module"` 这样 `import` 和 `export` 可以将 `index.js` 视作入口。
 
-### `package.json#homepage`
+#### `homepage`
 
 项目主页链接。
 
@@ -131,7 +131,7 @@ Node.js 和 Astro 用来解析 `index.js` 文件所用模块格式。
 
 它可以很好地将用户引向项目的在线示例、文档或是主页。
 
-#### `package.json#exports`
+#### `exports`
 
 当使用模块名称导入时的入口文件。
 
