--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -86,3 +86,53 @@ import logo from '../images/logo.png';
 ---
 <img src={logo} width="40" alt="Astro" />
 ```
+
+### `public/`
+
+Vos images stockées dans `public/` peuvent être utilisées par les composants (`.astro`, `.mdx` et autres Frameworks UI) mais aussi dans les fichiers Markdown.
+
+
+Cependant les fichiers dans le répertoire `/public` sont toujours utilisés ou copiés tels quels, sans aucun traitement. Si vous utilisez des images en dehors des fichiers Markdown, nous vous recommandons de conserver les images dans `src` lorsque cela est possible afin qu'Astro puisse les transformer, les optimiser et les regrouper.
+
+L'attribut `src` est **relatif au dossier public**. Dans Markdown, vous pouvez aussi utiliser la notation `![]()`.
+
+```astro title="src/pages/index.astro"
+---
+// Accéder aux images dans `public/images/`
+---
+<img src="/images/logo.png" />
+```
+
+## Intégration des image Astro
+
+L'intégration officielle d'Astro des images fournit deux composants Astro différents pour rendre des images optimisées, `<Image />` et `<Picture />`. Cela est supporté pour tous les sites statiques et pour [certains hébergeurs de déploiement rendu côté serveur](/fr/guides/integrations-guide/image/#installation).
+
+Après [avoir installé `@astrojs/image`](/fr/guides/integrations-guide/image/#installation), vous pouvez utiliser ces deux composants partout où vous pouvez utiliser des composants Astro : dans les fichiers `.astro` et `.mdx`.
+
+### `<Image />`
+
+Le [composant Astro `<Image />`](/fr/guides/integrations-guide/image/#image-) vous permet d'optimiser une seule image et de spécifier sa largeur, hauteur, et/ou son rapport rapport largeur/hauteur. Vous pouvez même convertir votre image dans un format de sortie particulier.
+
+Ce composant est utile pour les images dont vous souhaitez qu'elles conservent une taille constante sur tous les écrans ou contrôler étroitement la qualité d'une image (ex: les logos).
+
+Pour les images responsive, ou pour une direction artistique, utilisez à la place le composant `<Picture />`.
+
+#### Images locales dans `src/`
+
+(attributs requis : [`src`](/fr/guides/integrations-guide/image/#src), et [`alt`](/fr/guides/integrations-guide/image/#alt))
+
+Importez vos images dans le Frontmatter et passez-les directement à l'attribut `src` du composant `<Image />`.
+
+`alt` est requis, mais [toutes les autres propriétés](/fr/guides/integrations-guide/image/#image-) sont facultatives et prendront par défaut les propriétés d'origine du fichier image si elles ne sont pas fournies.
+
+#### Images distantes
+
+(attributs requis: [`src`](/fr/guides/integrations-guide/image/#src), [`alt`](/fr/guides/integrations-guide/image/#alt), [`format`](/fr/guides/integrations-guide/image/#format), et dimensions)
+
+Passez une URL complète à l'attribut `src` du composant `<Image />` et incluez une valeur pour `alt`.
+
+Le composant `<Image />` ne peut pas déterminer le format de fichier d'origine d'une image distante, vous devez donc fournir un `format` de sortie (ex : png, avif) pour convertir votre image distante.
+
+Vous devez également fournir soit [`width`](/fr/guides/integrations-guide/image/#width) et [`height`](/fr/guides/integrations-guide/image/#height), soit l'une des dimensions et un [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio) pour éviter les décalages de mise en page du contenu car le composant `<Image />` ne connaît pas les dimensions d'une image distante.
+
+[Toutes les autre propriétés](/fr/guides/integrations-guide/image/#image-) sont facultatives.
