--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -136,3 +136,218 @@ Le composant `<Image />` ne peut pas déterminer le format de fichier d'origine 
 Vous devez également fournir soit [`width`](/fr/guides/integrations-guide/image/#width) et [`height`](/fr/guides/integrations-guide/image/#height), soit l'une des dimensions et un [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio) pour éviter les décalages de mise en page du contenu car le composant `<Image />` ne connaît pas les dimensions d'une image distante.
 
 [Toutes les autre propriétés](/fr/guides/integrations-guide/image/#image-) sont facultatives.
+
+#### Images locales dans `public/`
+
+(attributs requis: [`src`](/fr/guides/integrations-guide/image/#src), [`alt`](/fr/guides/integrations-guide/image/#alt), [`format`](/fr/guides/integrations-guide/image/#format), et dimensions)
+
+Passez un chemin relatif au répertoire publique à l'attribut `src` du composant `<Image />` et incluez une valeur pour `alt`.
+
+Elle sera traitée comme une image distante, ce qui nécessite à la fois [`width`](/fr/guides/integrations-guide/image/#width) et [`height`](/fr/guides/integrations-guide/image /#height), ou une dimension et un attribut [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio).
+
+A value for the `format` attribute (e.g. png, avif) to transform your image is required.
+Une valeur pour l'attribut `format` (ex : png, avif) pour transformer votre image est requise
+
+[Toutes les autres propriétés](/fr/guides/integrations-guide/image/#image-) sont facultatives.
+
+Votre image d'origine sera copiée sans traitement dans le dossier de Build, comme tous les fichiers situés dans `public/`, et l'intégration d'image d'Astro renverra également des versions optimisées de l'image.
+
+#### Exemples
+
+```astro
+---
+// src/pages/index.astro
+import { Image } from '@astrojs/image/components';
+import localImage from "../assets/logo.png";
+const remoteImage = "https://picsum.photos/id/957/300/200.jpg";
+const localAlt = "Le logo d'Astro";
+const remoteAlt = "Une vue en contre-plongée d'une forêt pendant la journée";
+---
+
+<!-- Image locale optimisée, gardant la largeur, hauteur et format d'image originaux -->
+<Image src={localImage} alt={localAlt} />
+
+<!-- La hauteur sera recalculée pour correspondre au ratio d'aspect original -->
+<Image src={localImage} width={300} alt={localAlt} />
+
+<!-- Pour les images distantes, les dimensions désirées et le format sont requis -->
+<Image src={remoteImage} width={300} aspectRatio="1:1" format="png" alt={remoteAlt} />
+
+<!-- recadrage à une largeur et une hauteur spécifiques -->
+<Image src={localImage} width={300} height={600} alt={localAlt}/>
+<Image src={remoteImage} width={544} height={184} format="png" alt={remoteAlt}/>
+
+<!-- recadrage à un ratio d'aspect spécifique et conversion vers un format AVIF -->
+<Image src={localImage} aspectRatio="16:9" format="avif" alt={localAlt}/>
+<Image src={remoteImage} height={200} aspectRatio="16:9" format="avif" alt={remoteAlt}/>
+
+<!-- les importations d'images locales peuvent également être directement intégrées -->
+<Image src={import('../assets/logo.png')} alt={localAlt}/>
+
+<!-- Si une image est stockée dans le dossier `/public`, utilisez son chemin relatif à `/public` -->
+<Image src="/penguin.jpg" width="300" aspectRatio={1} format="png" alt="A happy penguin"/>
+```
+
+### `<Picture /> `
+
+Le [composant Astro `<Picture />`](/fr/guides/integrations-guide/image/#picture-) peut être utilisé pour fournir des images responsive sur votre site, y compris plusieurs tailles, formats et mises en page d'image.
+
+Vous pouvez laisser le navigateur de l'utilisateur choisir les tailles d'image, les résolutions et les types de fichiers appropriés en fonction de facteurs tels que la taille d'écran et la bande passante. Ou, vous pouvez spécifier des règles que le navigateur doit suivre en fonction des media queries.
+
+Ce composant est utile pour optimiser ce que votre utilisateur voit à différentes tailles d'écran, ou pour la direction artistique.
+
+:::tip
+Consultez le guide de MDN pour plus d'informations sur [les images responsive et la direction arstistique](https://developer.mozilla.org/fr/docs/Learn/HTML/Multimedia_and_embedding/Responsive_images#d%C3%A9cision_de_nature_artistique).
+:::
+
+#### Images locales
+
+(attributs requis: [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1))
+
+Importez votre image dans frontmatter et passez-la directement à l'attribut `src` du composant `<Picture />`.
+
+Vous devez fournir au composant des indications sur les largeurs d'image et les tailles d'écran, mais [toutes les autres propriétés](/fr/guides/integrations-guide/image/#picture-) sont facultatives.
+
+Par défaut, les [`formats`](/fr/guides/integrations-guide/image/#formats) du composant `<Picture />` incluront `avif` et `webp` en plus du format d'origine de l'image s'il n'est pas spécifié .
+
+#### Remote Images 
+
+(attributs requis: [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1), et [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio-1))
+
+Passez une URL complète à l'attribut `src` du composant `<Picture />`.
+
+Une valeur pour `aspectRatio` est également requise pour s'assurer que la hauteur correcte des images distantes puisse être calculée au moment du Build.
+
+Vous devez fournir au composant des indications sur les largeurs d'image et les tailles d'écran, mais [toutes les autres propriétés](/fr/guides/integrations-guide/image/#picture-) sont facultatives.
+
+Bien que [`formats`](/fr/guides/integrations-guide/image/#formats) ne soit pas requis, le format d'image d'origine des images distantes est inconnu et ne sera pas inclus par défaut. S'il n'est pas fourni, seuls `webp` et `avif` seront inclus.
+
+#### Local Images in `public/`
+
+(required attributes: [`src`](/en/guides/integrations-guide/image/#src-1), [`widths`](/en/guides/integrations-guide/image/#widths), [`sizes`](/en/guides/integrations-guide/image/#sizes), [`alt`](/en/guides/integrations-guide/image/#alt-1), and [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio-1))
+
+Pass the component's `src` attribute a path relative to the public folder and include a value for `alt`. 
+
+The image will be treated as a remote image, so a value for `aspectRatio` is also required to ensure the correct height can be calculated at build time.
+
+You must provide the component with guidance for image widths and screen sizes, but [all other properties](/en/guides/integrations-guide/image/#picture-) are optional.
+
+Although [`formats`](/en/guides/integrations-guide/image/#formats) is not required, the original image format of images in the `public/` folder is unknown and will not be included by default. If not provided, only `webp` and `avif` will be included.
+
+Your original image will be copied unprocessed to the build folder, like all files located in `public/`, and Astro's image integration will also return optimized versions of the image.
+
+#### Examples
+
+```astro
+---
+import { Picture } from '@astrojs/image/components';
+import localImage from '../assets/logo.png';
+const remoteImage = 'https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png';
+---
+
+<!--Local image with multiple sizes and formats-->
+<Picture src={localImage} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" formats={['avif', 'jpeg', 'png', 'webp']} alt="The Astro logo" />
+
+<!--Remote image (aspect ratio is required)-->
+<Picture src={remoteImage} widths={[200, 400, 800]} aspectRatio="4:3" sizes="(max-width: 800px) 100vw, 800px" alt="The Google logo" />
+
+<!--Images in /public work like remote images-->
+<Picture src="/logo.png" widths={[200, 400, 800]} aspectRatio="4:3" sizes="(max-width: 800px) 100vw, 800px" alt="The Google logo" />
+
+<!--Inlined imports are supported-->
+<Picture src={import("../assets/logo.png")} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" alt="The Astro logo" />
+
+```
+
+
+### Using in MDX
+
+In `.mdx` files, `<Image />` and `<Picture />` can receive your image `src` through imports and exports.
+
+```mdx
+// src/pages/index.mdx
+
+import { Image, Picture } from '@astrojs/image/components';
+import rocket from '../assets/rocket.png';
+export const galaxy = 'https://astro.build/assets/galaxy.jpg';
+
+<Image src={import('../assets/logo.png')} alt="Astro"/>
+<Image src={rocket} width={300} alt="Spaceship approaching the moon."/>
+<Picture src={rocket} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" alt="A rocket blasting off." />
+<Picture src={galaxy} widths={[200, 400, 800]} aspectRatio={16/9} sizes="(max-width: 800px) 100vw, 800px" alt="Outer space." />
+```
+
+### Setting Default Values
+
+Currently, there is no way to specify default values for all `<Image />` and `<Picture />` components. Required attributes should be set on each individual component.
+
+As an alternative, you can wrap these components in another Astro component for reuse. For example, you could create a component for your blog post images:
+
+```astro title="src/components/BlogPostImage.astro"
+---
+import { Picture } from '@astrojs/image/components';
+
+const {src, ...attrs} = Astro.props;
+---
+<Picture src={src} widths={[400, 800, 1500]} sizes="(max-width: 767px) 100vw, 736px" {...attrs} />
+
+<style>
+  img, picture :global(img), svg {
+    margin-block: 2.5rem;
+    border-radius: 0.75rem;
+  }
+</style>
+```
+
+### Using `<img>` with the Image Integration
+
+The official image integration will change image imports to return an object rather than a source string.
+The object has the following properties, derived from the imported file:
+```ts
+{
+  src: string;
+  width: number;
+  height: number;
+  format: 'avif' | 'gif' | 'heic' | 'heif' | 'jpeg' | 'jpg' | 'png' | 'tiff' | 'webp';
+}
+```
+
+If you have the image integration installed, refer to the `src` property of the object when using `<img>`. 
+
+```astro ".src"
+---
+import rocket from '../images/rocket.svg';
+---
+<img src={rocket.src} alt="A rocketship in space."/>
+```
+
+Alternatively, add `?url` to your imports to tell them to return a source string.
+
+```astro "?url"
+---
+import rocket from '../images/rocket.svg?url';
+---
+<img src={rocket} alt="A rocketship in space."/>
+```
+
+## Using Images from a CMS or CDN
+
+Image CDNs work with Astro. Use an image's full URL as the `src` attribute in an `<img>` tag or Markdown notation. 
+
+Alternatively, if the CDN provides a Node.js SDK, you can use that in your project. For example, [Cloudinary’s SDK](https://cloudinary.com/documentation/node_integration) can generate the `<img>` tag with the appropriate `src` for you.
+
+To use [external images with the `<Image />`](#remote-images) and [`<Picture />`](#remote-images-1) components from Astro's image integration, you must specify the appropriate dimension and format values for working with remote images.
+
+## Alt Text
+
+Not all users can see images in the same way, so accessibility is an especially important concern when using images. Use the `alt` attribute to provide [descriptive alt text](https://www.w3.org/WAI/tutorials/images/) for images. 
+
+This attribute is required for the image integration's `<Image />` and `<Picture />` components. These components will throw an error if no alt text is provided. 
+
+If the image is merely decorative (i.e. doesn’t contribute to the understanding of the page), set `alt=""` so that screen readers know to ignore the image.
+
+
+
+## Community Integrations
+
+In addition to the official [`@astrojs/image`](/en/guides/integrations-guide/image/) integration, there are several third-party [community image integrations](https://astro.build/integrations/css+ui/?q=image) for optimizing and working with images in your Astro project.
