Fix Storyblok CMS guide typo

--- a/src/pages/en/guides/cms/storyblok.mdx
+++ b/src/pages/en/guides/cms/storyblok.mdx
@@ -223,7 +223,7 @@ With the integration set up, you can now create a blog with Astro and Storyblok.
 
 1. **A Storyblok space** - For this tutorial, we recommend using a new space. If you already have a space with Bloks, feel free to use them, but you will need to modify the code to match the Blok names and content types.
 
-2. **An Astro project integraded with Storyblok** - See [integrating with Astro](#integrating-with-astro) for instructions on how to set up the integration.
+2. **An Astro project integrated with Storyblok** - See [integrating with Astro](#integrating-with-astro) for instructions on how to set up the integration.
 
 ### Creating a blok library
 
