Fix filepath typo in tutorial

--- a/src/pages/en/tutorial/2-pages/2.mdx
+++ b/src/pages/en/tutorial/2-pages/2.mdx
@@ -103,7 +103,7 @@ The information at the top of the file, inside the code fences, is called frontm
     </html>
     ```
 
-2. Now, add two more files in `src/posts/`: `post-2.md` and `post-3.md`. Here is some sample code you can copy and paste into your files, or, you can create your own!
+2. Now, add two more files in `src/pages/posts/`: `post-2.md` and `post-3.md`. Here is some sample code you can copy and paste into your files, or, you can create your own!
 
     ```md title="src/pages/posts/post-2.md"
     ---
