--- a/src/pages/zh-cn/core-concepts/project-structure.mdx
+++ b/src/pages/zh-cn/core-concepts/project-structure.mdx
@@ -5,7 +5,7 @@ description: 学习如何用 Astro 构建一个项目。
 ---
 import FileTree from '~/components/FileTree.astro'
 
-你用 `create-astro` CLI 向导所生成的新 Astro 项目中已经包括一些文件和文件夹。其他的则你将自己创建并添加到 Astro 的现有文件结构中。
+你用 `create astro` CLI 向导所生成的新 Astro 项目中已经包括一些文件和文件夹。其他的则你将自己创建并添加到 Astro 的现有文件结构中。
 
 以下是 Astro 的项目结构，以及一些你将在新项目中发现的文件。
 
