make note a paragraph

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -121,10 +121,10 @@ If you **do not** already extend Astro's `strict` or `strictest` recommended Typ
 }
 ```
 
-:::note[Not using TypeScript?]
 If you use `.js` or `.mjs` files in an Astro project, you can enable IntelliSense and type checking in your editor by enabling `allowJs` in your `tsconfig.json`:
-```json title="tsconfig.json" ins={5}
+```json title="tsconfig.json" ins={6}
 {
+  // Note: No change needed if you use "astro/tsconfigs/strict" or "astro/tsconfigs/strictest"
   "extends": "astro/tsconfigs/base",
   "compilerOptions": {
     "strictNullChecks": true,
@@ -132,7 +132,6 @@ If you use `.js` or `.mjs` files in an Astro project, you can enable IntelliSens
   }
 }
 ```
-:::
 
 ### Defining a collection schema
 
